add en&ru localization